--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
   margin: 0px;
   justify-content: center;
-  background-color: rgba(241, 177, 13, 0.4);
+  background-color: rgba(241, 177, 13, 0.42);
 }
 
 #containerGeral {
@@ -67,19 +67,96 @@ body {
   margin: 0px;
 }
 
-#selecionada {
-  background-color: rgba(203, 124, 6, 0.4);
+.paginasBotao:hover {
+  border: 1px solid rgba(203, 124, 6, 1);
+  border-radius: 32px;
+}
+
+.paginasBotao:active {
+  background-color: rgba(203, 124, 6, 0.42);
   border: 1px solid rgba(203, 124, 6, 1);
   border-radius: 32px;
 }
 
 .paginasBotao i {
-  margin-right: 5px;
-  margin-left: 10px;
+  margin-right: 3%;
+  margin-left: 6%;
+}
+
+#selecionada {
+  background-color: rgba(203, 124, 6, 0.42);
+  border: 1px solid rgba(203, 124, 6, 1);
+  border-radius: 32px;
 }
 
 #patinho {
-  height: 69px;
-  width: 103px;
-  margin-top: 36px;
+  height: 9%;
+  width: 24%;
+  margin-top: 12%;
+}
+
+#containerBusca {
+  width: 80%;
+  height: 6.5%;
+  margin-top: 12%;
+  align-self: center;
+}
+
+#busca {
+  width: 90%;
+  height: 100%;
+  border-radius: 32px;
+  border: solid 1px rgba(203, 124, 6, 1);
+  background-color: rgba(203, 124, 6, 0.42);
+  font-size: 22px;
+  color: rgba(203, 124, 6, 1);
+  padding-left: 20px;
+  font-family: "Roboto", sans-serif;
+}
+
+::placeholder {
+  color: rgba(203, 124, 6, 1);
+  opacity: 1;
+}
+
+#containerNoticias {
+  height: 38%;
+  width: 80%;
+  background-color: rgba(203, 124, 6, 0.42);
+  border: 1px solid rgba(203, 124, 6, 1);
+  border-radius: 8px;
+  margin-top: 16%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#headerNoticias {
+  font-size: 24px;
+  color: rgba(203, 124, 6, 1);
+  font-family: "Roboto", sans-serif;
+  margin-top: 8%;
+}
+
+.noticia {
+  display: flex;
+  flex-direction: row;
+  width: 95%;
+  height: 20%;
+  justify-content: space-between;
+  margin-bottom: 15%;
+}
+
+.textoNoticia {
+  font-size: 12px;
+  color: black;
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  width: 65%;
+}
+
+.imagemNoticia {
+  width: 35%;
+  height: 100%;
+  border-radius: 8px;
 }
