--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,7 @@ body {
 
 #containerBusca {
   width: 80%;
-  height: 6.5%;
+  height: 5.5%;
   margin-top: 12%;
   align-self: center;
 }
@@ -271,6 +271,7 @@ body {
   display: flex;
   flex-direction: column;
   margin-top: 2%;
+  flex-shrink: 0;
 }
 
 .fotoPerfil {
