--- a/css/styles.css
+++ b/css/styles.css
@@ -194,11 +194,20 @@ body {
   margin-left: 4%;
 }
 
+#contadorCaracter{
+  font-family: "Roboto", sans-serif;
+  margin-top: 6.5%;
+  margin-right: 5%;
+  font-size: 18px;
+  color: rgba(203, 124, 6, 1)
+}
+
 .textosPosts {
   width: 100%;
   display: flex;
   flex-direction: column;
   margin-left: 0.6%;
+  padding: 0;
 }
 
 .textosPosts p {
@@ -214,7 +223,7 @@ body {
 #formNovoPiu {
   margin-left: 1%;
   margin-top: 3%;
-  width: 99%;
+  width: 90%;
 }
 
 #conteudoNovoPiu {
@@ -224,7 +233,9 @@ body {
   font-family: "Roboto", sans-serif;
   outline: none;
   color: black;
+  margin-top: 1.5%;
   width: 99%;
+  
 }
 
 #conteudoNovoPiu::placeholder {
@@ -282,9 +293,11 @@ body {
 
 .conteudoPost {
   color: black;
-  width: 99%;
-  margin-top: 3%;
+  width: 80%;
+  margin-top: 4%;
   margin-left: 1%;
+  margin-bottom: 0;
+  overflow: hidden;
 }
 
 .ajustesPosts {
@@ -323,4 +336,17 @@ body {
 .interacoes button i:hover {
   color: white;
   cursor: pointer;
+}
+
+.msgVazia{
+  color: red;
+  position: absolute;
+  font-size: 22px;
+  font-family: "Roboto", sans-serif;
+  animation: fade-out 2s;
+}
+
+@keyframes fade-out{
+  from {opacity :1;}
+  to {opacity :0;}
 }
