--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,7 @@ body {
 
 #novoPiu {
   width: 90%;
+  min-height: 160px;
   height: fit-content;
   background-color: rgba(203, 124, 6, 0.42);
   border: 1px solid rgba(203, 124, 6, 1);
